# python-notes

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
01_basic/: 01_hello_world.py  Chapter 1 Basics.md
02_data_types/: 01_variables.py  02_basic_data_types.py  02_numbers.py  03_strings.py  04_string_formatting.py  05_lists.py  06_tuples.py  07_sets.py  08_dictionaries.py  09_type_hinting.py  10_type_conversion.py
03_operations/: 01_arithmetic.py  02_relational.py  03_logical.py  04_identity.py  05_membership.py  06_bitwise.py  07_assignment.py
04_decision_making/: 01_if.py
05_loops/: 01_while.py  02_for.py  03_nested_loops.py  04_list_comprehension.py
06_functions/: 01_function_basics.py  02_default_parameters.py  03_args_kwargs.py  04_recursive_function.py  05_lambda.py
07_classes/: 01_OOP.py  02_class.py  03_classmethod_staticmethod.py  04_inheritance.py  04_property.py  05_inheritance.py  06_multiple_inheritance.py  multiple_inheritance.py
assignments/: assignment_001.py
c01_basics/: Chapter-1.1-Basics.md  README.md  c01_01_hello_world.py  c01_02_comments.py
c02_basic_data_types/: Chapter 2.1 Variables.md  Chapter 2.2 Numeric Data Types.md  Chapter 2.3 Strings.md  Chapter 2.4 string formatting.md  Chapter 2.5 Operations.md  Chapter 2.6 Typecasting.md  README.md
c02_data_types/: Chapter 2.1 Variables.md  Chapter 2.2 Numeric Data Types.md  Chapter 2.3 Strings.md  c0202_basic_data_types.py  c0205_lists.py
c03_advanced_data_types/: README.md  chapter 3.1 list.md  chapter 3.2 tuple.md  chapter 3.3 dictionary.md  chapter 3.4 set.md  chapter 3.5 nesting.md
c04_decision_making/: README.md
c05_loops/: Chapter 5.1 while loop.md  (+5 more)
(+299 files in other folders)
